crates/rattler_solve/tests/snapshots/backends__libsolv_rs__solve_dummy_repo_install_non_existent.snap
---
source: crates/rattler_solve/tests/backends.rs
assertion_line: 474
expression: err
---
Unsolvable(
    [
        "No candidates were found for asdfasdf.\n",
    ],
)
