crates/rattler_solve/tests/snapshots/backends__libsolv_rs__solve_locked.snap
---
source: crates/rattler_solve/tests/backends.rs
assertion_line: 546
expression: result.unwrap_err()
---
Cannot solve the request because of: The following packages are incompatible
|-- bors >=2 can be installed with any of the following options:
    |-- bors 2.1
    |-- bors 2.0
|-- bors 1.0 is locked, but another version is required as reported above
|-- bors 1.0 is locked, but another version is required as reported above

