crates/rattler_solve/tests/snapshots/backends__libsolv_rs__solve_python_libsolv_rs.snap
---
source: crates/rattler_solve/tests/backends.rs
assertion_line: 450
expression: "solve_real_world::<LibsolvRsBackend>(vec![\"python=3.9\"])"
---
- _libgcc_mutex 0.1 conda_forge
- _openmp_mutex 4.5 2_gnu
- bzip2 1.0.8 h7f98852_4
- ca-certificates 2022.6.15 ha878542_0
- ld_impl_linux-64 2.36.1 hea4e1c9_2
- libffi 3.4.2 h7f98852_5
- libgcc-ng 12.1.0 h8d9b700_16
- libgomp 12.1.0 h8d9b700_16
- libnsl 2.0.0 h7f98852_0
- libsqlite 3.39.2 h753d276_1
- libuuid 2.32.1 h7f98852_1000
- libzlib 1.2.12 h166bdaf_2
- ncurses 6.3 h27087fc_1
- openssl 3.0.5 h166bdaf_1
- python 3.9.13 h2660328_0_cpython
- readline 8.1.2 h0f457ee_0
- sqlite 3.39.2 h4ff8645_1
- tk 8.6.12 h27826a3_0
- tzdata 2021e he74cb21_0
- xz 5.2.6 h166bdaf_0

